--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,9 @@
   width: 12px; /* Set the width of the scrollbar */
   height: 6px;
 }
+.quill > .ql-toolbar:first-child {
+  display: none !important;
+}
 
 ::-webkit-scrollbar-thumb {
   background-color: #888; /* Set the color of the thumb */
