--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,6 +75,9 @@ a {
 #logo {
   max-height: 115px !important;
 }
+.link {
+  text-decoration: underline !important;
+}
 .listing-image {
   height: 200px !important;
   max-width: 100% !important;
