--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
   --primary-border: #99e232;
   --secondary: #11B8DD;
   --accent: #f7fcfe;
-  --error: ##FF6961;
+  --error: #FF6961;
 }
 
 /* Mode Gelap */
@@ -21,7 +21,7 @@
     --primary-border: #99e232;
     --secondary: #11B8DD;
     --accent: #424347;              /* Aksen gelap */
-    --error: ##FF6961;
+    --error: #FF6961;
   }
   ::placeholder {
     color: #dfe5e881 !important;
