--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,9 @@ body, .navbar {
   background-color: var(--background) !important;
   color: var(--text) !important;
 }
+button {
+  color: var(--error) !important;
+}
 a {
   color: var(--text) !important;
   text-decoration: none !important;
@@ -63,8 +66,11 @@ a {
 .btn {
   transition: all 0.5s !important;
   background-color: var(--accent) !important;
+  border: 1px solid var(--accent) !important;
   font-weight: bold !important;
-  border: 1px solid var(--text) !important;
+}
+.btn-light {
+  border: none !important;
 }
 .btn:hover {
   opacity: 80%;
