--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@font-face {
+  font-family: 'Bangkahulu';
+  src: url('https://cdn.glitch.global/453b0d20-b8fc-4202-841d-a49bccee5c1e/bangkahulu.ttf?v=1712387792024') format('truetype');
+}
+
+/* Terapkan font Bangkahulu untuk elemen dengan lang="rejang" */
+[lang="rejang"] {
+  font-family: 'Bangkahulu', sans-serif;
+}
+
 :root {
   --text: #121212;
   --muted: #12121275;
