--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,7 +115,7 @@ a {
 }
 @media only screen and (min-width: 600px) {
   .listing-image {
-    width: auto;
+    width: auto !important;
     max-width: 100% !important;
   }
   .h-100 {
